--- a/style.css
+++ b/style.css
@@ -1,55 +1,101 @@
 /* Global */
+:root{
+  /* Color */
+--white-color:#fff;
+--black-color:rgb(0, 0, 0);
+--blue-color:#045fd4;
+--red-color:#ff0000;
+--grey-dark-color:#909090;
+--grey-light-color:#e0e0e0;
 
-:root {
-     /* Color */
-     --color-white: #ffffff;
-     --color-light-white: #eeeeee;
-     --color-grey: #616161;
-     --color-light-grey: #7c7979;
-     --color-blue: #2744e9;
-     --color-black: #0a09099d;
-   
-     /* Font size */
-     --font-large: 48px;
-     --font-medium: 28px;
-     --font-regular: 18px;
-     --font-small: 16px;
-     --font-micro: 14px;
-   
-     /* Font weight */
-     --weight-bold: 700;
-     --weight-semi-bold: 600;
-     --weight-regular: 400;
+  /* Size */
+--padding:12px;
+--avatar-size:36px;
+
+  /* Font Size */
+--font-large:18px;
+--font-medium:14px;
+--font-smale:12px;
+--font-micro:10px;
 }
      /* Universal tags*/
-
-     /* Navbar */
-#navbar{
-    position: fixed;
-    /* 위에 고정시켜놓기 */
+     *{
+      padding:0;
+      margin:0;
+      box-sizing:border-box;
+  }
+  
+  body{
+      font-family: Roboto;
+  }
+  ul{
+      list-style: none;
+  }
+  button, button:focus{
+      border: none;
+      cursor: pointer;
+      outline: none;
+  }
+  
+    
+header{
+  
     width: 100%;
     display: flex;
     justify-content: space-between;
-    background-color: transparent;
     align-items: center;
     padding: 16px;
-    background-color: var(--color-black);
+    background-color: var(--black-color);
+    color: var(--white-color);
+}
+header .logo{
+  font-size: var(--font-large);
+
+}
+.logo i{
+  color: #ff0000;
+}
+header .menuicons .fa-search{
+  margin-right: var(--padding);
+}
+/* Video Player */
+.player{
+  position: sticky;    /* 어디를 position을 줄것인지 힌트를 줘야함 */
+top:0;
+text-align: center;
+background-color: var(--black-color);
 }
 
-#navbar.navbar--dark{
-    background-color: var(--color-black);
-    padding: 8px;
-    
-  }
-  .navbar__menu__item{
-      display:flex;
-      
-  }
-  .navbar_logo{
-    font-size: var(--font-medium);
-  font-weight: var(--weight-semi-bold);
+.player video{
+  width: 100%;
+  height: 100%;
+  max-width: 1000px;
 }
-.navbar__menu__item{
-    padding: 8px 12px;
-    margin:0 4px;
+body> .info{
+  padding: var(--padding);
+
 }
+.info .metadata .hashtags{
+  display: flex;
+  font-size: var(--font-medium);
+  color: var(--blue-color);
+  ;
+}
+.info  .metadata .hashtags li{
+  margin-right: var(--padding);
+
+}
+.info .metadata .maintitle{
+  display: flex;
+}
+.info  .metadata .maintitle .title{
+  font-size: var(--font-medium);
+      overflow: hidden;
+      margin-right: var(--padding);
+    }
+    .info .metadata .maintitle .title.clamp {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
+    }
